<resources>
    <string name="app_name">Quiz</string>
    <string name="email">Email</string>
    <string name="or">OR</string>
    <string name="sign_in">SIGN IN</string>
    <string name="account">Do not have an account? <font color='#5b39c6'>Sign Up </font>  </string>
    <string name="forgot_password"> <u> Forgot your password? </u></string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="_continue">CONTINUE</string>
</resources>